k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clearpath-api
  labels:
    app.kubernetes.io/name: clearpath-api
    app.kubernetes.io/part-of: clearpath-platform
    project: clearpath-api
    managed-by: kustomize
